--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/vue": "^2.2.0",
     "@vue-hero-icons/outline": "^1.7.2",
     "core-js": "^3.8.3",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
