--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
+    "vue-tel-input": "^6.0.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
   },
