--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@tanstack/vue-query": "^5.81.5",
     "@vue-hero-icons/outline": "^1.7.2",
+    "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
@@ -24,6 +26,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
